Add discs controller

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,5 +17,5 @@
       &nbsp;|&nbsp;
       <a href="/bags/new">Add Bag</a>
       &nbsp;|&nbsp;
-      <a href="/disc/new">Add Disc</a>
+      <a href="/discs/new">Add Disc</a>
     </nav>
