Add index pages for discs and bags

--- a/views/discs/new.ejs
+++ b/views/discs/new.ejs
@@ -35,6 +35,6 @@
   </select>
   <br />
   <input type="submit" value="Add Disc" />
+</form>
 
-<p><%= errorMsg %></p>
 <%- include('../partials/footer') %>
