--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,11 +11,15 @@
     <nav>
       <a href="/">Home</a>
       &nbsp;|&nbsp;
-      <a href="/bags">Bags</a>
-      &nbsp;|&nbsp;
       <a href="/shelf">Shelf</a>
+      &nbsp;|&nbsp;
+      <a href="/bags">Bags</a>
       &nbsp;|&nbsp;
       <a href="/bags/new">Add Bag</a>
       &nbsp;|&nbsp;
       <a href="/discs/new">Add Disc</a>
+      &nbsp;|&nbsp;
+      <a href="/discs">All Disc</a>
+      &nbsp;|&nbsp;
+      <a href="/logout">Logout</a>
     </nav>
