Add slect for changing bage

--- a/views/bags/new.ejs
+++ b/views/bags/new.ejs
@@ -16,6 +16,9 @@
     <input type="number" name="capacity" id="capacity" />
     </select>
     <br />
+    <label for="image">Image</label>
+    <input type="file" name="image" id="image"/>
+    <br />
     <input type="submit" value="Add Bag" />
 
 <%- include('../partials/footer') %>
