--- a/views/bags/show.ejs
+++ b/views/bags/show.ejs
@@ -38,6 +38,7 @@
 <% } else { %>
 <p>No discs in this bag</p>
 <% } %>
+<a href="/bags/<%= bag.id %>/edit">Edit Bag</a>
 
   <%- include('../partials/footer') %>
 
