Add shelf feature on user creation

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
       <% if (user) { %>
       <a href="/">Home</a>
       &nbsp;|&nbsp;
-      <a href="/shelf">Shelf</a>
+      <a href="bags/shelf">Shelf</a>
       &nbsp;|&nbsp;
       <a href="/bags">Bags</a>
       &nbsp;|&nbsp;
