Shelf feature view working proplerly

--- a/views/bags/shelf.ejs
+++ b/views/bags/shelf.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/header') %>
 
-<h2>Discs:</h2>
-<% if (shelf.discs.length) { %>
+<h2>Shelf:</h2>
+<% if (shelf.discs) { %>
 <table>
   <thead>
     <tr>
