--- a/views/discs/show.ejs
+++ b/views/discs/show.ejs
@@ -10,7 +10,7 @@
 <h2>Turn: <%= disc.turn %></h2>
 <h2>Fade: <%= disc.fade %></h2>
 <h2>Image: <%= disc.image %></h2>
-<h2>Bag: <% if (disc.bag) { %><%= disc.bag.name %><% } else { %>None<% } %></h2>
+<h2>Bag: <% if (disc.bag) { %><%= disc.bag.name %><% } else { %>Shelf<% } %></h2>
 <a href="/discs/<%= disc.id %>/edit">Edit</a>
 
 
