--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
       <% if (user) { %>
       <a href="/">Home</a>
       &nbsp;|&nbsp;
-      <a href="bags/shelf">Shelf</a>
+      <a href="/bags/shelf">Shelf</a>
       &nbsp;|&nbsp;
       <a href="/bags">Bags</a>
       &nbsp;|&nbsp;
@@ -20,10 +20,11 @@
       &nbsp;|&nbsp;
       <a href="/discs/new">Add Disc</a>
       &nbsp;|&nbsp;
-      <a href="/discs">All Disc</a>
-      &nbsp;|&nbsp;
+      <!-- <a href="/discs">All Disc</a>
+      &nbsp;|&nbsp; -->
         <a href="/logout">LOG OUT</a>
         <% } else { %>
           <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
           <% } %>
     </nav>
+  
