--- a/views/bags/edit.ejs
+++ b/views/bags/edit.ejs
@@ -4,16 +4,16 @@
 
 <form action="/bags/<%= bag.id %>?_method=PUT" method="POST">
     <label for="name">Name</label>
-    <input type="text" name="name" id="name" value="<%= bag.name %>" />
+    <input type="text" name="name" id="name" value="<%= bag.name %>"/>
     <br />
     <label for="brand">Brand</label>
-    <input type="text" name="brand" id="brand" value="<%= bag.brand %>" />
+    <input type="text" name="brand" id="brand" value="<%= bag.brand %>"/>
     <br />
     <label for="color">Color</label>
-    <input type="text" name="color" id="color" value="<%= bag.color %>" />
+    <input type="color" name="color" id="color" value="<%= bag.color %>"/>
     <br />
     <label for="capacity">Capacity</label>
-    <input type="number" name="capacity" id="capacity" value="<%= bag.capacity %>" />
+    <input type="number" name="capacity" id="capacity" value="<%= bag.capacity %>"/>
     </select>
     <br />
     <label for="image">Image</label>
