--- a/views/bags/new.ejs
+++ b/views/bags/new.ejs
@@ -4,16 +4,16 @@
 
 <form action="/bags" method="POST">
     <label for="brand">Brand</label>
-    <input type="text" name="brand" id="brand" />
+    <input type="text" name="brand" id="brand" pattern="^[a-zA-Z0-9 &-]+$"/>
     <br />
     <label for="name">Name</label>
-    <input type="text" name="name" id="name" />
+    <input type="text" name="name" id="name" pattern="^[a-zA-Z0-9 &-]+$"/>
     <br />
     <label for="color">Color</label>
-    <input type="text" name="color" id="color" />
+    <input type="color" name="color" id="color"/>
     <br />
     <label for="capacity">Capacity</label>
-    <input type="number" name="capacity" id="capacity" />
+    <input type="number" name="capacity" id="capacity" pattern="^[a-zA-Z0-9 &-]+$"/>
     </select>
     <br />
     <!-- <label for="image">Image</label>
