--- a/views/discs/index.ejs
+++ b/views/discs/index.ejs
@@ -12,7 +12,7 @@
           <th>Brand</th>
           <th>Type</th>
           <th>Color</th>
-          <th>Image</th>
+          <th>Bag</th>
         </tr>
       </thead>
       <tbody>
@@ -22,7 +22,7 @@
             <td><%= disc.brand %></td>
             <td><%= disc.type %></td>
             <td><%= disc.color %></td>
-            <td><img src="<%= disc.image %>"></td>
+            <td><%= disc.bag %></td>
             <td>
               <a href="/discs/<%= disc.id %>">View</a>
               <a href="/discs/<%= disc.id %>/edit">Edit</a>
