--- a/views/discs/new.ejs
+++ b/views/discs/new.ejs
@@ -13,7 +13,7 @@
   <input type="text" name="type" id="type" pattern="^[a-zA-Z0-9 &-]+$"/>
   <br />
   <label for="color">Color*</label>
-  <input type="text" name="color" id="color" pattern="^[a-zA-Z0-9 &-]+$"/>
+  <input type="color" name="color" id="color"/>
   <br />
   <label for="speed">Speed</label>
   <input type="number" name="speed" id="speed" step="0.1"/>
