Add feature to automatically move the disc from the deleted bag to the users self

--- a/views/bags/edit.ejs
+++ b/views/bags/edit.ejs
@@ -16,9 +16,9 @@
     <input type="number" name="capacity" id="capacity" value="<%= bag.capacity %>"/>
     </select>
     <br />
-    <label for="image">Image</label>
+    <!-- <label for="image">Image</label>
     <input type="file" name="image" id="image" value="<%= bag.image %>"/>
-    <br />
+    <br /> -->
     <input type="submit" value="Update Bag" />
 </form>
     
