--- a/views/bags/show.ejs
+++ b/views/bags/show.ejs
@@ -9,7 +9,7 @@
 <% if (bag.discs.length) { %>
 <div class="disc-grid">
   <% bag.discs.forEach(d => { %>
-  <div class="disc" style="background-color: <%= d.color %>;"
+  <div class="disc" style="background-color: <%= d.color %>">
     <h3><%= d.name %></h3>
     <p><%= d.brand %></p>
     <p><%= d.type %></p>
