--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -69,3 +69,12 @@ button {
   display: flex;
   gap: 10px;
 }
+
+.bag-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.bag-buttons form {
+  display: inline;
+}
