Style layout for bag discs to match shelf

--- a/views/bags/edit.ejs
+++ b/views/bags/edit.ejs
@@ -2,7 +2,7 @@
 
 <h1>Edit Bag</h1>
 
-<form action="/bags/<%= bag.id %>?_method=PUT" method="POST">
+<form class="edit-bags-form" action="/bags/<%= bag.id %>?_method=PUT" method="POST">
     <label for="name">Name</label>
     <input type="text" name="name" id="name" value="<%= bag.name %>"/>
     <br />
