--- a/views/bags/new.ejs
+++ b/views/bags/new.ejs
@@ -2,7 +2,7 @@
 
 <h1>New Bag</h1>
 
-<form action="/bags" method="POST">
+<form class="new-bags-form" action="/bags" method="POST">
     <label for="brand">Brand</label>
     <input type="text" name="brand" id="brand" pattern="^[a-zA-Z0-9 &-]+$"/>
     <br />
