--- a/views/discs/new.ejs
+++ b/views/discs/new.ejs
@@ -2,7 +2,7 @@
 
 <h1>New Disc</h1>
 
-<form action="/discs" method="POST">
+<form class="new-disc-form" action="/discs" method="POST">
   <label for="brand">Brand*</label>
   <input type="text" name="brand" id="brand" pattern="^[a-zA-Z0-9 &-]+$"/>
   <br />
