--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,17 +57,21 @@ button {
   padding: 20px;
   border-radius: 50%;
   color: #fff;
+  font-weight: 500;
   text-align: center;
   position: relative;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .button-group {
   position: absolute;
-  bottom: 10px;
+  border-radius: 5px;
+  bottom: 5px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
   gap: 10px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .bag-buttons {
@@ -77,4 +81,60 @@ button {
 
 .bag-buttons form {
   display: inline;
+}
+
+
+.edit-bags-form,
+.edit-disc-form,
+.new-disc-form,
+.new-bags-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 0px 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.edit-bags-form label,
+.edit-disc-form label,
+.new-disc-form label,
+.new-bags-form label {
+  margin-bottom: 5px;
+}
+
+.edit-bags-form input,
+.edit-disc-form input,
+.new-disc-form input,
+.new-bags-form input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 1px;
+}
+
+.edit-bags-form input[type="submit"],
+.edit-disc-form input[type="submit"],
+.new-disc-form input[type="submit"],
+.new-bags-form input[type="submit"] {
+  cursor: pointer;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px;
+}
+
+.edit-bags-form input[type="submit"]:hover,
+.edit-disc-form input[type="submit"]:hover,
+.new-disc-form input[type="submit"]:hover,
+.new-bags-form input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.edit-bags-form input#color,
+.edit-disc-form input#color,
+.new-disc-form input#color,
+.new-bags-form input#color {
+  width: auto;
 }
