--- a/views/discs/show.ejs
+++ b/views/discs/show.ejs
@@ -4,7 +4,7 @@
 <h2>Disc Name: <%= disc.name %></h2>
 <h2>Brand: <%= disc.brand %></h2>
 <h2>Type: <%= disc.type %></h2>
-<h2>Color: <%= disc.color %></h2>
+<h2>Color: <section style="width: 50px; height: 20px; background-color: <%= disc.color %>;"></section></h2>
 <h2>Speed: <%= disc.speed %></h2>
 <h2>Glide: <%= disc.glide %></h2>
 <h2>Turn: <%= disc.turn %></h2>
