--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -92,7 +92,7 @@ button {
   flex-direction: column;
   max-width: 300px;
   margin: 0 auto;
-  padding: 0px 10px;
+  padding: 10px 10px;
   border-radius: 5px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
@@ -108,7 +108,7 @@ button {
 .edit-disc-form input,
 .new-disc-form input,
 .new-bags-form input {
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
   border: 1px solid #ccc;
   margin-bottom: 1px;
@@ -137,4 +137,18 @@ button {
 .new-disc-form input#color,
 .new-bags-form input#color {
   width: auto;
+}
+
+.edit-bags-form select,
+.edit-disc-form select,
+.new-disc-form select,
+.new-bags-form select {
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 1px;
+  width: 100%; /* Make the select element take up the full width of the form */
+  font-size: 16px; /* Increase the font size for better readability */
+  appearance: none; /* Remove default browser styling */
+  background-color: #dddcdc; /* Set a background color */
 }
