--- a/views/bags/shelf.ejs
+++ b/views/bags/shelf.ejs
@@ -1,6 +1,19 @@
 <%- include('../partials/header') %>
 
 <h2><%= title %></h2>
+
+<form id="sortForm" action="/bags/shelf" method="GET">Sort: 
+  <select name="sortby" onchange="document.getElementById('sortForm').submit();">
+    <option value="name" <%= sortby === 'name' ? 'selected' : '' %>>Name</option>
+    <option value="type" <%= sortby === 'type' ? 'selected' : '' %>>Type</option>
+    <option value="brand" <%= sortby === 'brand' ? 'selected' : '' %>>Brand</option>
+    <option value="speed" <%= sortby === 'speed' ? 'selected' : '' %>>Speed</option>
+    <option value="glide" <%= sortby === 'glide' ? 'selected' : '' %>>Glide</option>
+    <option value="turn" <%= sortby === 'turn' ? 'selected' : '' %>>Turn</option>
+    <option value="fade" <%= sortby === 'fade' ? 'selected' : '' %>>Fade</option>
+  </select>
+</form>
+
 <% if (user.shelf.discs) { %>
 <div class="disc-grid">
   <% user.shelf.discs.forEach(d => { %>
